--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ sphinx-rtd-theme==1.0.0
 scipy>=1.5.4
 tzlocal==2.1
 twine~=3.4.1
-wheel~=0.33.1
+wheel~=0.38.1
 packaging~=21.0
 pytz~=2021.3
-setuptools~=57.0.0
+setuptools>=65.5.1
